# iscsi-luks-csi

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-push.yaml  publish.yaml  tag.yaml
deploy/crds/: storage.gitopolis.dev_iscsiluksvolumes.yaml  storage.nikita.dev_iscsiluksvolumes.yaml
deploy/examples/: kustomization.yaml  pvc.yaml  secret.example.yaml  smoke-pod.yaml  static-pv.yaml
deploy/node/: csidriver.yaml  daemonset.yaml  kustomization.yaml  serviceaccount.yaml
proto/: csi.proto
src/: api.rs  config.rs  csi.rs  driver.rs  lib.rs  main.rs  ops.rs
