[package]
name = "iscsi-luks-csi"
version = "0.1.0"
edition = "2024"
description = "A narrow CSI node driver for static iSCSI LUNs with node-side LUKS encryption"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = { version = "4.0.0", default-features = true, features = ["runtime", "derive"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
