[package]
name = "iscsi-luks-csi"
version = "0.1.0"
edition = "2024"
description = "A narrow CSI node driver for static iSCSI LUNs with node-side LUKS encryption"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
k8s-openapi = { version = "0.28.0", features = ["v1_35"] }
kube = "4.0.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.14.6"
tonic-prost = "0.14.2"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
